added currencies in spanish

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
                 "packages/countries-pl/src",
                 "packages/countries/src",
                 "packages/currencies-en/src",
+                "packages/currencies-es/src",
                 "packages/currencies/src",
                 "packages/gb-counties-en/src",
                 "packages/gb-counties/src",
@@ -82,6 +83,7 @@
                 "Squire\\ContinentsServiceProvider",
                 "Squire\\AirportsEnServiceProvider",
                 "Squire\\CurrenciesEnServiceProvider",
+                "Squire\\CurrenciesEsServiceProvider",
                 "Squire\\ContinentsPlServiceProvider",
                 "Squire\\CurrenciesServiceProvider",
                 "Squire\\RegionsServiceProvider",
@@ -109,6 +111,7 @@
         "squirephp/countries-pl": "self.version",
         "squirephp/currencies": "self.version",
         "squirephp/currencies-en": "self.version",
+        "squirephp/currencies-es": "self.version",
         "squirephp/gb-counties": "self.version",
         "squirephp/gb-counties-en": "self.version",
         "squirephp/model": "self.version",
